# TesseractOCR1C

./: .gitignore  .gitmodules  CMakeLists.txt  Compile.bat  Example.xml  LICENSE  README.md  appveyor.yml  manifest.xml  version.h
Example/: filename
Example/Forms/: AppVeyor.xml  Autotests.xml  Initialize.xml  MainForm.xml  RunTests.xml  xUnitBDD.xml
Example/Forms/AppVeyor/Ext/Form/: Module.bsl
Example/Forms/Autotests/Ext/: Form.xml
Example/Forms/Autotests/Ext/Form/: Module.bsl
Example/Forms/Initialize/Ext/Form/: Module.bsl
Example/Forms/MainForm/Ext/: Form.xml
Example/Forms/MainForm/Ext/Form/: Module.bsl
Example/Forms/RunTests/Ext/Form/: Module.bsl
Example/Forms/xUnitBDD/Ext/Form/: Module.bsl
Example/Templates/: TesseractOCR1C.xml  TesseractOCR1С.xml
src/: Tesseract1C.cpp  Tesseract1C.h
